--- a/app/assets/stylesheets/manage/manage_three_column.css.scss
+++ b/app/assets/stylesheets/manage/manage_three_column.css.scss
@@ -27,7 +27,7 @@
       }
     }
     .manage-left-content{
-      background-color:white;
+      background-color:#fff;
       &>.left{
         height:100%;
         @include box-border(180px);
