--- a/app/views/roles/_left_menu.html.erb
+++ b/app/views/roles/_left_menu.html.erb
@@ -1,10 +1,12 @@
-<ul class="manage-left-menu" id="manage-left-menu" type="group">
-     <li><%= t 'manage.user.new.authority' %></li>
-     <li id="manage-menu-add" style="background-color:rgba(0,0,0,0)"></li>
+<div class="left">
+  <ul class="manage-left-menu" id="manage-left-menu" type="group">
+    <li><%= t 'manage.user.new.authority' %></li>
+    <li id="manage-menu-add" style="background-color:rgba(0,0,0,0)"></li>
 
-     <%@roles.each do |role|%>
-         <li class="<%= role.id==@active_role_id ? 'active' : ''%>" title="<%= role.name %>" number="<%= role.id%>">
-             <a><%= role.name %></a>
-         </li>
-     <%end%>
-</ul>
+    <%@roles.each do |role|%>
+        <li class="<%= role.id==@active_role_id ? 'active' : ''%>" title="<%= role.name %>" number="<%= role.id%>">
+          <a><%= role.name %></a>
+        </li>
+    <%end%>
+  </ul>
+</div>
