--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -3,6 +3,13 @@
 @import "main_part/btn.css.scss";
 @import "main_part/date_picker.css.scss";
 @import "main_part/message.css.scss";
+@import "libs/aero.css";
+@import "libs/font-awesome.css";
+@import "libs/tipsy.css";
+@import "libs/chosen.css";
+@import "libs/datepicker.css";
+@import "libs/datetimepicker.css";
+@import "libs/jquery.gridster.css";
 @font-face {
   font-family:"open-sans";
   src: url("/assets/OpenSans-Regular.eot");
