--- a/app/views/entities/index_bak.html.erb
+++ b/app/views/entities/index_bak.html.erb
@@ -5,7 +5,7 @@
       <p class="current-group-item"><%= t 'manage.department.desc.manage'%></p>
     </div>
 
-    <div class="manage-left-content" id="dashboard-content" name="department">
+    <div class="manage-left-content" id="manage-left-content" name="department">
       <div class="right-list-top-control" id="right-list-top-control" name="department">
         <input type="checkbox" id="manage-total-check"/>
         <a class="btn" id="manage-item-remove"><%= t 'manage.base.delete_btn'%></a>
@@ -56,9 +56,3 @@
   </aside>
 
 </div>
-<script>
-    $(document).ready(function () {
-        MANAGE.init();
-        MANAGE.department.init();
-    })
-</script>
