--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -71,9 +71,4 @@
                <% end %>
           </div>
      </div>
-
-     <script type="text/javascript">
-          $(document).ready(function() {
-               init_addUser();
-          })
-     </script>
+</div>
